--- a/docs/write_up/JDM_mixed_fishery_letter.tex
+++ b/docs/write_up/JDM_mixed_fishery_letter.tex
@@ -13,8 +13,10 @@
 \usepackage[]{changes}
 \definechangesauthor[color = red]{coilin}
 \definechangesauthor[color = blue]{Paul}
+\definechangesauthor[color = purple]{brutus}
+
 % cite is loaded from nature class
-\setlist{itemsep=1pt} % This controls spacing between items in the lists
+\setlist{itemsep=1pt} % This controls spacing betweencitems in the lists
 \setlength\parindent{0pt} % Removes all indentation from paragraphs
 % figures here	
 \graphicspath{{figures/}}
@@ -83,7 +85,7 @@ fisheries.
 \subsection{Mixed fisheries and the EU landings obligation} 
 
 \deleted{Recent} Efforts to reduce exploitation rates in commercial fisheries
-have begun the process of rebuilding depleted fish populations \cite{Worm2009}.
+have begun the process of rebuilding depleted fish populations\cite{Worm2009}.
 Improved fisheries management \deleted{has the potential to} can increase
 population sizes and allow increased sustainable catches, yet fisheries catch
 globally remains stagnant \deleted{\cite{FAO2016}}. In light of projected
@@ -93,18 +95,19 @@ important role for well managed fisheries in supporting future food security
 \replaced[id=coilin]{necessitating that}{remains a need to ensure} fisheries
 are managed efficiently to maximise productivity.
 
-A particular challenge in realising increased catches from rebuilt populations
-is maximising yields from mixed fisheries \cite{Branch2008, Kuriyama2016,
-	Ulrich2016}. In mixed fisheries, \deleted{the predominant type of fishery
-	worldwide,} several fish species are caught together in the same net or
-fishing operation \deleted{(known as a `technical interaction')}. If managed by
-individual quotas, and catches do not match available stock quotas, either a
-vessel must stop fishing when the first quota is reached (the `choke' species)
-or overexploitation of the weaker species occurs while fishers continue to
-catch more healthy species and throw back (`discard') the fish for which they
-have no quota \cite{Batsleer2015}. There is\deleted{, therefore,} a pressing need
-for scientific tools which simplify the complexities of mixed fisheries to help 
-\replaced[id = coilin]{avoid discarding}{managers and fishers maximise catches}. 
+A \deleted[id = brutus]{particular} challenge in realising increased catches
+from rebuilt populations is maximising yields from mixed fisheries
+\cite{Branch2008, Kuriyama2016, Ulrich2016}. In mixed fisheries, \deleted{the
+	predominant type of fishery worldwide,} several fish species are caught
+together in the same net or fishing operation \deleted{(known as a `technical
+	interaction')}. If managed by individual quotas, and catches do not
+match available stock quotas, either a vessel must stop fishing when the first
+quota is reached (the `choke' species) or overexploitation of the weaker
+species occurs while fishers continue to catch more healthy species and throw
+back (`discard') the fish for which they have no quota \cite{Batsleer2015}.
+There is\deleted{, therefore,} a pressing need for scientific tools which
+simplify the complexities of mixed fisheries to help \replaced[id =
+coilin]{avoid discarding}{managers and fishers maximise catches}. 
 
 Sustainability of European fisheries has been hampered by this `mixed fishery
 problem' for decades with large-scale discarding resulting \cite{Uhlmann2014}.
@@ -122,9 +125,9 @@ counted against the respective stock quota\deleted{; second, by 2020 all fish
 	ecosystem based approach to fisheries management \cite{Garcia2003}}. 
 
 \deleted{Societal objectives for fisheries to achieve MSY across ecosystem
-	components are paralleled by} Individual fishers goals \added[id =
-coilin]{are to} maximise utility; whether that be profit, income or the
-continuance of traditional ractices.  \deleted{Under the new policy,} Unless
+	components are paralleled by} \deleted{Individual fishers goals %\added[id =
+%coilin]{are to} maximise utility; whether that be profit, income or the
+continuance of traditional practices.}  \deleted{Under the new policy,} Unless
 fishers can avoid catch of unwanted species they will have to stop fishing when
 reaching their first restrictive quota. This introduces a potential significant
 cost to fishers of under-utilised quota\cite{Ulrich2016} and provides a strong
@@ -134,15 +137,15 @@ species while avoiding unwanted catch,\deleted{ Methods by which fishers can
 	alter their fishing patterns include} either by switching fishing
 method (e.g.  trawling to netting), changing technical gear characteristics
 (e.g.  introducing escapement panels in nets), or the timing and location of
-fishing activity\cite{vanPutten2012a}. For example, otter trawl gears are known
+fishing activity\cite{vanPutten2012a}. \deleted{For example, otter trawl gears are known
 to have higher catch rates of roundfish due to the higher headline and wider
 sweeps which herd demersal fish into the net while beam trawls employ chain
-mesh to \replaced[id = coilin]{lift}{'dig'} benthic flatfish species from the
-seabed\cite{Fraser2008}.
+mesh to %\replaced[id = coilin]{lift}{'dig'} benthic flatfish species from the
+seabed\cite{Fraser2008}.}
 
 Spatiotemporal management measures \deleted{(such as time-limited fishery
 	closures)} have been applied to reduce unwanted catch with varying
-degrees of success (e.g.\cite{Needle2011, Dunn2014a}).  However, such measures
+degrees of success\cite{Needle2011, Dunn2014a}.  However, such measures
 have \deleted{generally} been targeted at individual species without
 considering associations and interactions among several species. Highly mixed
 fisheries are complex with spatial, technological and community interactions
@@ -172,10 +175,7 @@ dynamics of the different species as a function of latent variables
 \cite{Thorson2015} representing spatial variation (9 factors; \deleted{which we
 	call} 'average' spatial variation) and spatio-temporal variation (9
 factors) for encounter probability and positive catch rates (\deleted{which we
-	call} 'positive density') separately \cite{Thorson2015a}.  \deleted{We
-	use} The resultant factor analysis is used to identify community
-dynamics and drivers common among 18 species and results presented
-through \deleted{transformation of the loading matrices using} PCA rotation. By
+	call} 'positive density') separately \cite{Thorson2015a}. By
 describing the species dynamics through underlying contributory
 spatiotemporal factors we can take account of how the factors contribute to
 affect catches of the species in mixed fisheries. \deleted{We use} Gaussian
@@ -212,11 +212,12 @@ area (average 2011 - 2015;\cite{STECF2017}). Each species was separated into
 juvenile and adult size classes based on their legal minimum conservation
 reference size (Table S2).
 
-\deleted[id = coilin]{We analyse the data to understand how the different associations among emergent
-species-groups (combination of species and size class) and their potential
-drivers affect catch compositions in mixed fisheries. We consider how these
-have changed over time, and the implications for mixed fisheries in managing
-catches of quota species under the EU landing obligation.}
+\deleted[id = coilin]{We analyse the data to understand how the different
+	associations among emergent species-groups (combination of species and
+	size class) and their potential drivers affect catch compositions in
+	mixed fisheries. We consider how these have changed over time, and the
+	implications for mixed fisheries in managing catches of quota species
+	under the EU landing obligation.}
 
 \subsection{Common average spatial patterns driving species associations} A
 spatial dynamic factor analysis decomposes the dominant spatial patterns
@@ -258,30 +259,31 @@ megrims, juvenile plaice and sole are negatively associated \deleted{reflecting
 	their more southerly distribution} (Figure 1).
 
 \deleted{While this exploratory factor analysis is modelling unobserved drivers of
-	distribution,} We considered what might be driving the differences seen
+	distribution,} \deleted[id = brutus]{We considered what might be driving the differences seen
 in the spatial factor loadings. The first factor was highly correlated with
 log(depth) for both encounter probability (-0.85, CI = -0.88 to -0.81; Figure
-S1) and positive density (-0.71, CI = -0.77 to -0.65; Figure S2), \deleted{A
-	random forest classification tree assigned} with 80 \% of the variance
+S1) and positive density (-0.71, CI = -0.77 to -0.65; Figure S2),} \deleted{A
+	random forest classification tree assigned} \deleted[id = brutus]{with 80 \% of the variance
 in the first factor for encounter probability to depth and predominant
 substrate type, with the majority (86 \%) of the variance explained by depth
-(random forest classification tree). \deleted{The variance explained by these
+(random forest classification tree).} \deleted{The variance explained by these
 variables dropped to 25 \% on the second factor with a more even split between
 depth and substrate, while explaining 60 \% of the variance on the third
 factor.  For positive density, the variables explained less of the variance
 with 62 \%, 35 \%, and 31 \% for each of the factors, respectively.}
 
-It is clear that depth and to a lesser extent substrate are important
+\deleted[id = brutus]{It is clear that depth and to a lesser extent substrate are important
 predictors for the main driver of similarities and differences in distributions
-and abundances for the different species. \deleted{The first factor correlates
+and abundances for the different species.} \deleted{The first factor correlates
 strongly with these variables, despite them not explicitly being incorporated
 in the model. While depth was incorporated as a covariate in an alternative
 model formulation (see Methods), it was found not to improve predictions. The
-utility of these variables as predictors of species distributions has been}, as
+utility of these variables as predictors of species distributions has
+been}\deleted[id = brutus]{, as
 identified in other marine species distribution models \cite{Robinson2011}; the
 advantage to the approach taken here is that, where such data is unavailable at
 appropriate spatial resolution, the spatial factor analysis can adequately
-characterise these influences on species spatial dynamics.
+characterise these influences on species spatial dynamics.}
 
 \subsection{\replaced[id = Paul]{Time varying species distributions, but stability
 		within species groups}{Changes in spatial patterns over time,
@@ -302,16 +304,16 @@ negatively associated with the second axes of Figure 2a) and the roundfish and
 flatfish (species-group more positively associated with the second axes of
 Figure 2a). For spatio-temporal positive density (Figure 2b) cod, haddock and
 whiting (the roundfish species) are separated from plaice, sole (the flatfish)
-and deeper water species. \deleted{As such,} From this it can be predicted that
+and deeper water species. \deleted{As such,} \deleted[id = brutus]{From this it can be predicted that
 higher catches of a species within a group (e.g.  cod in roundfish) would be
 expected when catching another species within that group (e.g. whiting in
 roundfish), \deleted{. This} suggesting \deleted{that} one or more common
 environmental drivers are influencing the distributions of the species groups,
 and that driver differentially affects the species groups, but this could not
-be explained by temperature \deleted{is often included as a covariate in
+be explained by temperature} \deleted{is often included as a covariate in
 	species distribution models, but was found not to contribute to the
-	variance in the first factor values} (Figure S6, no correlations found
-for either encounter probability or positive density).
+	variance in the first factor values}\deleted[id = brutus]{ (Figure S6, no correlations found
+for either encounter probability or positive density).}
 
 \subsection{Three clusters of species show similar spatial patterns}
 \replaced[id = coilin]{To}{In order to} gain greater insight into the community
@@ -320,16 +322,17 @@ species correlations. Pearson correlation coefficients for the modelled average
 spatial encounter probability (Figure 3a) show clear strong associations
 between adult and juvenile size classes for all species (\textgreater 0.75 for
 all species except hake, 0.56).  \deleted{Among species-groups,} Hierarchical
-clustering identified the same three common groups as our visual inspection of
-factor loadings above, with roundfish (cod, haddock, whiting) \deleted{closely
-	grouped in their association, with correlations for adult cod with
-	adult haddock and adult whiting of 0.73 and 0.5 respectively, while
-	adult haddock with adult whiting was 0.63 (Figure 3a).}, flatfish
-(plaice and sole) \deleted{are also strongly correlated with adult plaice and
-	sole having a coefficient of 0.75.  The final group are principally
-	the} and species found in the deeper waters (hake, megrim and both
-anglerfish species) \deleted{with the megrim strongly associated with the
-	budegassa anglerfish species (0.88). Negative relationships were found
+clustering identified the same three common groups \deleted[id = brutus]{as our
+	visual inspection of factor loadings above,} with roundfish (cod,
+haddock, whiting) \deleted{closely grouped in their association, with
+	correlations for adult cod with adult haddock and adult whiting of 0.73
+	and 0.5 respectively, while adult haddock with adult whiting was 0.63
+	(Figure 3a).}, flatfish (plaice and sole) \deleted{are also strongly
+	correlated with adult plaice and sole having a coefficient of 0.75.
+	The final group are principally the} and species found in the deeper
+waters (hake, megrim and both anglerfish species) \deleted{with the megrim
+	strongly associated with the budegassa anglerfish species (0.88).
+	Negative relationships were found
 	between plaice, sole and the monkfish species (-0.27, -0.26 for the
 	adult size class with budegassa adults respectively) and hake (-0.33,
 	-0.37) (Figure 3a)} showing strong intra-group correlations indicating
@@ -359,18 +362,19 @@ for the average positive density, with strong associations among the roundfish
 	(representing how correlations between species \textit{x} and species
 	\textit{y} change from year to year), indicating generally predictable
 	relationships between species from one year to the next. This suggests
-	that a positive or negative association between two species is
-	likely be persist from one year to the next, and that species are consistently associated with each other in the catch. The
-	correlation coefficients were 0.59 (0.52 - 0.66) and 0.47 (0.38 - 0.55)
-	for encounter probability and positive density respectively.  However,
-	a linear regression between the spatial correlations and the
-	spatio-temporal correlations shows high variance (R\textsuperscript{2}
-	= 0.36 and 0.22 respectively), indicating that the scale of these
-	relationships does change from one-year to the next. This would have
-	implications for the predictability of the relationship between catches
-	of one species and another when trying to balance catch with
-	quotas in mixed fisheries. It can also be seen in the spatial factor
-	maps that there are subtle differences in spatial patterns in factor
+	that a positive or negative association between two species is likely
+	be persist from one year to the next, and that species are consistently
+	associated with each other in the catch. The correlation coefficients
+	were 0.59 (0.52 - 0.66) and 0.47 (0.38 - 0.55) for encounter
+	probability and positive density respectively.  However, a linear
+	regression between the spatial correlations and the spatio-temporal
+	correlations shows high variance (R\textsuperscript{2} = 0.36 and 0.22
+	respectively), indicating that the scale of these relationships does
+	change from one-year to the next. This would have implications for the
+	predictability of the relationship between catches of one species and
+	another when trying to balance catch with quotas in mixed fisheries. It
+	can also be seen in the spatial factor maps that there are subtle
+	differences in spatial patterns in factor
 	loading values from one year to the next (Figures S4 and S5) indicating
 	changes may be driven by temporally changing environmental factors and
 	species behaviour.}
@@ -555,6 +559,11 @@ similar spatio-temporal patterns, allowing inference of species distributions
 and abundance of poorly sampled species through association with other species
 and allows for computation of spatio-temporal correlations among species
 \cite{Thorson2016b}.
+
+\added[id = brutus]{We use the resultant factor analysis is used to identify
+	community dynamics and drivers common among 18 species and results
+	presented through transformation of the loading matrices using PCA
+	rotation}. 
 
 \textbf{\textit{Estimation of abundances:}} Spatio-temporal encounter
 probability and positive catch rates are modelled separately with
